--- a/css/style.css
+++ b/css/style.css
@@ -247,32 +247,19 @@ textarea {
 .form-control,
 .form-select {
     font-size: 1.125rem;
-    color: #fff;
-    border-color: #353840;
     border-radius: 0;
-    background-color: #201d27;
     transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
 
 .form-control:focus,
 .form-select:focus {
-    color: #fff;
-    border-color: #4f545f;
-    background-color: #201d27;
     box-shadow: none;
-}
-
-.form-select {
-    background-image: url(../img/dropdown.svg);
-    background-size: 16px 10px;
 }
 
 .form-check-input {
     width: 1.25rem;
     height: 1.25rem;
     margin-top: 0.25rem;
-    border: 1px solid #545965;
-    background-image: linear-gradient(160deg, #838189 -100%, #14101D 100%);
 }
 
 .form-check-input[type=checkbox],
@@ -280,18 +267,45 @@ textarea {
     border-radius: 0;
 }
 
-.form-check-input:checked {
+.form-check-input:focus {
+    box-shadow: none;
+}
+
+.dark-mode .form-control,
+.dark-mode .form-select {
+    color: #fff;
+    border-color: #353840;
+    background-color: #201d27;
+}
+
+.dark-mode .form-control:focus,
+.dark-mode .form-select:focus {
+    color: #fff;
+    border-color: #4f545f;
+    background-color: #201d27;
+}
+
+.dark-mode .form-select {
+    background-image: url(../img/dropdown.svg);
+    background-size: 16px 10px;
+}
+
+.dark-mode .form-check-input {
+    border: 1px solid #545965;
+    background-image: linear-gradient(160deg, #838189 -100%, #14101D 100%);
+}
+
+.dark-mode .form-check-input:checked {
     background-color: #201d27;
     border-color: #353840;
 }
 
-.form-check-input:checked[type=checkbox] {
+.dark-mode .form-check-input:checked[type=checkbox] {
     background-image: url(../img/checked.svg);
 }
 
-.form-check-input:focus {
+.dark-mode .form-check-input:focus {
     border-color: #4f545f;
-    box-shadow: none;
 }
 
 /*//////////////////////////////////////////////////////////////////
@@ -594,6 +608,10 @@ img {
     background-color: var(--color-black);
 }
 
+.bg-color-blue {
+    background-color: var(--color-blue);
+}
+
 .mb-6 {
     margin-bottom: 6rem;
 }
@@ -618,6 +636,10 @@ img {
 
 .pb-7 {
     padding-bottom: 7rem !important;
+}
+
+.z-index-5 {
+    z-index: 5;
 }
 
 .z-index-1030 {
@@ -901,7 +923,7 @@ img {
 [ MAIN CONTENT ]*/
 
 .main {
-    padding: 3rem 0 0;
+    padding: 7rem 0 0;
 }
 
 .dark-mode {
@@ -909,10 +931,19 @@ img {
     --bs-link-hover-color: var(--color-blue);
 }
 
-.btn-prev,
-.btn-next {
-    --btn-icon-size: 4rem;
-    --bs-btn-font-size: 4rem;
+.frontpage-hero {
+    padding-top: 5rem;
+    padding-bottom: 0;
+}
+
+.heroSwiper {
+    position: relative;
+}
+
+.swiper .btn-prev,
+.swiper .btn-next {
+    --btn-icon-size: 3rem;
+    --bs-btn-font-size: 3rem;
     --bs-btn-color: rgba(18, 14, 30, .95);
     --bs-btn-bg: transparent;
     --bs-btn-border-color: transparent;
@@ -922,6 +953,32 @@ img {
     --bs-btn-active-color: rgba(18, 14, 30, .95);
     --bs-btn-active-bg: transparent;
     --bs-btn-active-border-color: transparent;
+    --bs-btn-disabled-color: rgba(18, 14, 30, .95);
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: transparent;
+    position: absolute;
+    top: 50%;
+    margin-top: calc(0px - (var(--btn-icon-size)/2));
+    opacity: 1;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, opacity 0.3s ease-in-out, left 0.3s ease-in-out, right 0.3s ease-in-out;
+    z-index: 10;
+}
+
+.swiper .btn-prev {
+    left: 0;
+    right: auto;
+}
+
+.swiper .btn-next {
+    right: 0;
+    left: auto;
+}
+
+.swiper .btn-prev:disabled,
+.swiper .btn-prev.disabled,
+.swiper .btn-next:disabled,
+.swiper .btn-next.disabled {
+    opacity: 0 !important;
 }
 
 .btn-hero {
@@ -939,13 +996,12 @@ img {
     z-index: -1;
 }
 
-.frontpage-hero {
-    padding-top: 5rem;
-    padding-bottom: 0;
+.tilt-3d {
+    transform-style: preserve-3d;
 }
 
-.frontpage-hero .heroSwiper {
-    margin-top: 5rem;
+.tilt-3d .tilt-3d-inner {
+    transform: translateZ(2rem);
 }
 
 .scroll-box {
@@ -1114,11 +1170,70 @@ img-comparison-slider {
     --bs-card-border-width: 0;
 }
 
+.card.card-blog {
+    --bs-card-border-radius: 0;
+    --bs-card-inner-border-radius: 0;
+    --bs-card-cap-padding-y: 1rem;
+    --bs-card-cap-bg: transparent;
+}
+
+.card.card-blog .badge {
+    --bs-badge-border-radius: 0;
+}
+
+.pagination {
+    --bs-pagination-item-margin-x: 0.125rem;
+    --bs-pagination-item-margin-y: 0;
+    --bs-pagination-item-width: 2.5rem;
+    --bs-pagination-item-height: 2.5rem;
+    --bs-pagination-padding-x: 0;
+    --bs-pagination-padding-y: 0;
+    --bs-pagination-font-size: 1rem;
+    --bs-pagination-color: var(--bs-link-color);
+    --bs-pagination-bg: transparent;
+    --bs-pagination-border-width: 0;
+    --bs-pagination-border-color: transparent;
+    --bs-pagination-border-radius: 0.375rem;
+    --bs-pagination-hover-color: var(--bs-link-hover-color);
+    --bs-pagination-hover-bg: #e9ecef;
+    --bs-pagination-hover-border-color: transparent;
+    --bs-pagination-focus-color: var(--bs-link-hover-color);
+    --bs-pagination-focus-bg: #e9ecef;
+    --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+    --bs-pagination-active-color: #fff;
+    --bs-pagination-active-bg: var(--color-blue);
+    --bs-pagination-active-border-color: transparent;
+    --bs-pagination-disabled-color: #6c757d;
+    --bs-pagination-disabled-bg: #fff;
+    --bs-pagination-disabled-border-color: transparent;
+}
+
+.pagination .page-item {
+    margin: var(--bs-pagination-item-margin-y) var(--bs-pagination-item-margin-x);
+}
+
+.pagination .page-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: var(--bs-pagination-item-width);
+    height: var(--bs-pagination-item-height);
+    border-radius: var(--bs-pagination-border-radius);
+}
+
+.pagination .page-item:not(:first-child) .page-link {
+    margin-left: 0;
+}
+
 
 /*//////////////////////////////////////////////////////////////////
 [ MEDIA ]*/
 
-@media (min-width: 576px) {}
+@media (min-width: 576px) {
+    .w-sm-auto {
+        width: auto !important;
+    }
+}
 
 @media (min-width: 768px) {
 
@@ -1158,6 +1273,36 @@ img-comparison-slider {
         bottom: 5rem;
     }
 
+    .swiper .btn-prev,
+    .swiper .btn-next {
+        --btn-icon-size: 4rem;
+        --bs-btn-font-size: 4rem;
+        opacity: 0;
+    }
+
+    .swiper .btn-prev {
+        left: -1rem;
+        right: auto;
+    }
+
+    .swiper .btn-next {
+        right: -1rem;
+        left: auto;
+    }
+
+    .swiper:hover .btn-prev,
+    .swiper:hover .btn-next {
+        opacity: 1;
+    }
+
+    .swiper:hover .btn-prev {
+        left: 0;
+    }
+
+    .swiper:hover .btn-next {
+        right: 0;
+    }
+
     .scroll-box {
         max-height: 405px;
         overflow-y: auto;
@@ -1178,8 +1323,8 @@ img-comparison-slider {
         background-color: var(--color-blue);
     }
 
-    .btn-prev:hover,
-    .btn-next:hover {
+    .swiper .btn-prev:hover,
+    .swiper .btn-next:hover {
         color: rgba(18, 14, 30, .5);
     }
 }
