--- a/css/style.css
+++ b/css/style.css
@@ -646,6 +646,10 @@ img {
     z-index: 1030;
 }
 
+.sticky-top {
+    position: static;
+}
+
 .dropdown-toggle::after {
     content: '\ea4a';
     font-family: "boxicons";
@@ -810,8 +814,8 @@ img {
 .offcanvas-xl,
 .offcanvas-xxl {
     --bs-offcanvas-zindex: 1045;
-    --bs-offcanvas-width: 100vw;
-    --bs-offcanvas-height: 100vh;
+    --bs-offcanvas-width: 400px;
+    --bs-offcanvas-height: 30vh;
     --bs-offcanvas-padding-x: 1rem;
     --bs-offcanvas-padding-y: 1rem;
     --bs-offcanvas-color: ;
@@ -821,7 +825,7 @@ img {
     --bs-offcanvas-box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
 }
 
-.offcanvas-body {
+#navbarNav .offcanvas-body {
     background: 50% 100% / contain no-repeat url("../img/bg-offcanvas.png");
 }
 
@@ -909,7 +913,7 @@ img {
     --bs-card-inner-border-radius: calc(0.375rem - 1px);
     --bs-card-cap-padding-y: 0.5rem;
     --bs-card-cap-padding-x: 1rem;
-    --bs-card-cap-bg: rgba(0, 0, 0, 0.03);
+    --bs-card-cap-bg: transparent;
     --bs-card-cap-color: ;
     --bs-card-height: ;
     --bs-card-color: ;
@@ -943,13 +947,13 @@ img {
 .swiper .btn-prev,
 .swiper .btn-next {
     --btn-icon-size: 3rem;
-    --bs-btn-font-size: 3rem;
+    --bs-btn-font-size: 1.75rem;
     --bs-btn-color: rgba(18, 14, 30, .95);
     --bs-btn-bg: transparent;
-    --bs-btn-border-color: transparent;
+    --bs-btn-border-color: rgba(18, 14, 30, .95);
     --bs-btn-hover-color: rgba(18, 14, 30, .95);
     --bs-btn-hover-bg: transparent;
-    --bs-btn-hover-border-color: transparent;
+    --bs-btn-hover-border-color: rgba(18, 14, 30, .5);
     --bs-btn-active-color: rgba(18, 14, 30, .95);
     --bs-btn-active-bg: transparent;
     --bs-btn-active-border-color: transparent;
@@ -1051,7 +1055,6 @@ img {
 .card.card-pricing {
     --bs-card-border-color: rgba(255, 255, 255, .1);
     --bs-card-bg: rgba(18, 14, 30, 0.2);
-    --bs-card-cap-bg: transparent;
     backdrop-filter: blur(46px);
 }
 
@@ -1161,8 +1164,7 @@ img-comparison-slider {
 
 .card.card-shop-item {
     --bs-card-spacer-y: 0.5rem;
-    --bs-card-border-color: rgba(255, 255, 255, .1);
-    --bs-card-cap-bg: transparent;
+    --bs-card-border-color: rgba(175, 175, 175, 0.25);
     padding-bottom: 1rem;
 }
 
@@ -1171,14 +1173,12 @@ img-comparison-slider {
 }
 
 .card.card-blog {
-    --bs-card-border-radius: 0;
-    --bs-card-inner-border-radius: 0;
+    --bs-card-border-color: rgba(175, 175, 175, 0.25);
     --bs-card-cap-padding-y: 1rem;
-    --bs-card-cap-bg: transparent;
 }
 
-.card.card-blog .badge {
-    --bs-badge-border-radius: 0;
+.card.card-blog .card-footer {
+    --bs-card-border-width: 0;
 }
 
 .pagination {
@@ -1229,11 +1229,7 @@ img-comparison-slider {
 /*//////////////////////////////////////////////////////////////////
 [ MEDIA ]*/
 
-@media (min-width: 576px) {
-    .w-sm-auto {
-        width: auto !important;
-    }
-}
+@media (min-width: 576px) {}
 
 @media (min-width: 768px) {
 
@@ -1248,7 +1244,18 @@ img-comparison-slider {
 
 @media (min-width: 992px) {
 
-    .offcanvas-body {
+    .w-lg-auto {
+        width: auto !important;
+    }
+
+    .sticky-top {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 80px;
+        z-index: 1020;
+    }
+
+    #navbarNav .offcanvas-body {
         background: none;
     }
 
@@ -1275,8 +1282,8 @@ img-comparison-slider {
 
     .swiper .btn-prev,
     .swiper .btn-next {
-        --btn-icon-size: 4rem;
-        --bs-btn-font-size: 4rem;
+        --btn-icon-size: 3.25rem;
+        --bs-btn-font-size: 2rem;
         opacity: 0;
     }
 
@@ -1313,7 +1320,6 @@ img-comparison-slider {
         width: 64px;
         height: 64px;
     }
-
 }
 
 @media (min-width: 1200px) {
