--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,10 @@ a.link-grey {
     --bs-link-hover-color: var(--color-blue);
 }
 
+.breadcrumb {
+    margin-bottom: 0;
+}
+
 .breadcrumb a {
     text-decoration: none;
 }
@@ -352,6 +356,63 @@ textarea {
 
 .btn-primary:hover {
     background-position: 0 100%;
+}
+
+.btn-sale-1 {
+    --bs-btn-padding-x: 2rem;
+    --bs-btn-border-width: 0;
+    --bs-btn-color: #fff;
+    --bs-btn-bg: transparent;
+    --bs-btn-border-color: transparent;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: transparent;
+    --bs-btn-hover-border-color: transparent;
+    --bs-btn-focus-shadow-rgb: 226, 3, 56;
+    --bs-btn-active-color: var(--color-black);
+    --bs-btn-active-bg: transparent;
+    --bs-btn-active-border-color: transparent;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: transparent;
+    background-image: linear-gradient(180deg, #CB34FF, #DB3AC3, #DB3AC3, #CB34FF);
+    background-size: 100% 200%;
+    background-position: 0 0;
+    -webkit-animation: shadow-pulse 3s infinite;
+    animation: shadow-pulse 3s infinite;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, background-position 0.3s ease-in-out;
+}
+
+.btn-sale-1:hover {
+    background-position: 0 100%;
+}
+
+@-webkit-keyframes shadow-pulse {
+    0% {
+        box-shadow: 0px 4px 21px #CB34FF;
+    }
+
+    50% {
+        box-shadow: 0px 1px 5px #CB34FF;
+    }
+
+    100% {
+        box-shadow: 0px 4px 21px #CB34FF;
+    }
+}
+
+@keyframes shadow-pulse {
+    0% {
+        box-shadow: 0px 4px 21px #CB34FF;
+    }
+
+    50% {
+        box-shadow: 0px 1px 5px #CB34FF;
+    }
+
+    100% {
+        box-shadow: 0px 4px 21px #CB34FF;
+    }
 }
 
 .btn-secondary {
@@ -932,7 +993,7 @@ img {
 [ MAIN CONTENT ]*/
 
 .main {
-    padding: 7rem 0 0;
+    padding: 3rem 0 0;
 }
 
 .dark-mode {
@@ -1222,6 +1283,48 @@ img-comparison-slider {
     margin-left: 0;
 }
 
+.top-sale-image-1 {
+    margin-top: -5rem;
+    margin-bottom: 0;
+}
+
+.top-sale-image-3 {
+    margin-top: -5rem;
+}
+
+.top-sale-image-4 {
+    margin-bottom: -3rem;
+}
+
+@media (min-width: 992px) {
+
+    .top-sale-image-1 {
+        margin-top: 0;
+        margin-bottom: -5rem;
+    }
+
+    .top-sale-image-3 {
+        margin-top: -5rem;
+    }
+
+    .top-sale-image-4 {
+        margin-bottom: -3rem;
+    }
+}
+
+@media (min-width: 1300px) {
+
+    .top-sale-image-1 {
+        margin-left: 0;
+        margin-right: 5rem;
+    }
+
+    .top-sale-image-4 {
+        margin-left: 5rem;
+        margin-right: 5rem;
+    }
+}
+
 
 /*//////////////////////////////////////////////////////////////////
 [ MEDIA ]*/
@@ -1248,16 +1351,16 @@ img-comparison-slider {
 
     .offcanvas-collapse {
         background-color: transparent;
-        bottom: auto!important;
+        bottom: auto !important;
         display: block;
-        height: auto!important;
-        left: auto!important;
+        height: auto !important;
+        left: auto !important;
         position: static;
-        right: auto!important;
-        top: auto!important;
-        transform: none!important;
+        right: auto !important;
+        top: auto !important;
+        transform: none !important;
         visibility: visible;
-        width: 100%!important;
+        width: 100% !important;
     }
 
     .w-lg-auto {
