--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,7 @@ textarea {
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: transparent;
     --bs-btn-disabled-border-color: transparent;
+    --btn-shadow-pulse-color: #CB34FF;
     background-image: linear-gradient(180deg, #CB34FF, #DB3AC3, #DB3AC3, #CB34FF);
     background-size: 100% 200%;
     background-position: 0 0;
@@ -354,31 +355,61 @@ textarea {
     background-position: 0 100%;
 }
 
+.btn-sale-2 {
+    --bs-btn-padding-x: 2rem;
+    --bs-btn-border-width: 0;
+    --bs-btn-color: #6934FF;
+    --bs-btn-bg: transparent;
+    --bs-btn-border-color: transparent;
+    --bs-btn-hover-color: #6934FF;
+    --bs-btn-hover-bg: transparent;
+    --bs-btn-hover-border-color: transparent;
+    --bs-btn-focus-shadow-rgb: 226, 3, 56;
+    --bs-btn-active-color: var(--color-black);
+    --bs-btn-active-bg: transparent;
+    --bs-btn-active-border-color: transparent;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #6934FF;
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: transparent;
+    --btn-shadow-pulse-color: #93FF60;
+    background-image: linear-gradient(180deg, #60FFA0, #93FF60, #93FF60, #60FFA0);
+    background-size: 100% 200%;
+    background-position: 0 0;
+    -webkit-animation: shadow-pulse 3s infinite;
+    animation: shadow-pulse 3s infinite;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, background-position 0.3s ease-in-out;
+}
+
+.btn-sale-2:hover {
+    background-position: 0 100%;
+}
+
 @-webkit-keyframes shadow-pulse {
     0% {
-        box-shadow: 0px 4px 21px #CB34FF;
+        box-shadow: 0px 4px 21px var(--btn-shadow-pulse-color);
     }
 
     50% {
-        box-shadow: 0px 1px 5px #CB34FF;
+        box-shadow: 0px 1px 5px var(--btn-shadow-pulse-color);
     }
 
     100% {
-        box-shadow: 0px 4px 21px #CB34FF;
+        box-shadow: 0px 4px 21px var(--btn-shadow-pulse-color);
     }
 }
 
 @keyframes shadow-pulse {
     0% {
-        box-shadow: 0px 4px 21px #CB34FF;
+        box-shadow: 0px 4px 21px var(--btn-shadow-pulse-color);
     }
 
     50% {
-        box-shadow: 0px 1px 5px #CB34FF;
+        box-shadow: 0px 1px 5px var(--btn-shadow-pulse-color);
     }
 
     100% {
-        box-shadow: 0px 4px 21px #CB34FF;
+        box-shadow: 0px 4px 21px var(--btn-shadow-pulse-color);
     }
 }
 
