--- a/css/style.css
+++ b/css/style.css
@@ -889,7 +889,7 @@ img {
 
 .logo {
     display: inline-block;
-    width: 182px;
+    width: 146px;
 }
 
 .offcanvas,
@@ -1131,8 +1131,9 @@ img {
 
 .card.card-pricing {
     --bs-card-border-color: rgba(255, 255, 255, .1);
-    --bs-card-bg: rgba(18, 14, 30, 0.2);
+    --bs-card-bg: rgba(18, 14, 30, 0.8);
     backdrop-filter: blur(46px);
+    -webkit-backdrop-filter: blur(46px);
 }
 
 .card.card-pricing .text-muted {
@@ -1347,6 +1348,7 @@ img-comparison-slider {
 .cta-promo {
     position: relative;
     border-radius: 40px;
+    background-position: 0 50% !important;
 }
 
 .cta-promo-img {
@@ -1367,6 +1369,10 @@ img-comparison-slider {
 }
 
 @media (min-width: 992px) {
+    .cta-promo {
+        background-position: 50% 50% !important;
+    }
+
     .cta-promo-img {
         right: 32px;
     }
@@ -1401,6 +1407,10 @@ img-comparison-slider {
 }
 
 @media (min-width: 992px) {
+
+    .logo {
+        width: 182px;
+    }
 
     .bg-lg-center-cover {
         background-position: 50% 50%;
