--- a/css/style.css
+++ b/css/style.css
@@ -1389,6 +1389,34 @@ img-comparison-slider {
     top: 0;
 }
 
+.avatar-container {
+    position: relative;
+}
+
+.avatar-container img {
+    width: 190px;
+    height: 190px;
+    transition: opacity 0.3s;
+    background-color: var(--bs-body-bg);
+}
+
+.avatar-container img {
+    opacity: 1;
+}
+
+.avatar-container img+img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+}
+
+.avatar-container:hover img+img {
+    opacity: 1;
+}
+
 
 /*//////////////////////////////////////////////////////////////////
 [ MEDIA ]*/
