--- a/css/style.css
+++ b/css/style.css
@@ -607,77 +607,77 @@ img {
 }
 
 .fs-12 {
-    font-size: 0.75rem;
+    font-size: 12px;
 }
 
 .fs-13 {
-    font-size: 0.8125rem;
+    font-size: 13px;
 }
 
 .fs-16 {
-    font-size: 1rem;
+    font-size: 16px;
 }
 
 .fs-18 {
-    font-size: 1.125rem;
+    font-size: 18px;
 }
 
 .fs-20 {
-    font-size: 1.25rem;
+    font-size: 20px;
 }
 
 .fs-24 {
-    font-size: 1.5rem;
+    font-size: 24px;
 }
 
 .fs-28 {
-    font-size: 1.75rem;
+    font-size: 28px;
 }
 
 .fs-32 {
-    font-size: 2rem;
+    font-size: 32px;
 }
 
 .fs-34 {
-    font-size: 2.125rem;
+    font-size: 34px;
 }
 
 @media (min-width: 992px) {
 
     .fs-lg-12 {
-        font-size: 0.75rem;
+        font-size: 12px;
     }
 
     .fs-lg-13 {
-        font-size: 0.8125rem;
+        font-size: 13px;
     }
 
     .fs-lg-16 {
-        font-size: 1rem;
+        font-size: 16px;
     }
 
     .fs-lg-18 {
-        font-size: 1.125rem;
+        font-size: 18px;
     }
 
     .fs-lg-20 {
-        font-size: 1.25rem;
+        font-size: 20px;
     }
 
     .fs-lg-24 {
-        font-size: 1.5rem;
+        font-size: 24px;
     }
 
     .fs-lg-28 {
-        font-size: 1.75rem;
+        font-size: 28px;
     }
 
     .fs-lg-32 {
-        font-size: 2rem;
+        font-size: 32px;
     }
 
     .fs-lg-34 {
-        font-size: 2.125rem;
+        font-size: 34px;
     }
 }
 
@@ -742,32 +742,6 @@ img {
 
 .bg-color-blue {
     background-color: var(--color-blue);
-}
-
-.mb-6 {
-    margin-bottom: 6rem;
-}
-
-.mb-7 {
-    margin-bottom: 7rem;
-}
-
-.py-6 {
-    padding-top: 5rem !important;
-    padding-bottom: 5rem !important;
-}
-
-.py-7 {
-    padding-top: 7rem !important;
-    padding-bottom: 7rem !important;
-}
-
-.pt-7 {
-    padding-top: 7rem !important;
-}
-
-.pb-7 {
-    padding-bottom: 7rem !important;
 }
 
 .z-index-5 {
@@ -957,9 +931,9 @@ img {
     --bs-offcanvas-box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
 }
 
-#navbarNav .offcanvas-body {
+/* #navbarNav .offcanvas-body {
     background: 50% 100% / contain no-repeat url("../img/bg-offcanvas.png");
-}
+} */
 
 /*//////////////////////////////////////////////////////////////////
 [ FOOTER ]*/
@@ -1001,8 +975,44 @@ img {
 }
 
 .btn-scroll-top.show {
+    right: 1.25rem;
     bottom: 6.5rem;
     opacity: 1;
+}
+
+.btn-call-back {
+	--btn-icon-size: 3.25rem;
+    position: fixed;
+    right: 1.25rem;
+    bottom: 11.5rem;
+    z-index: 999;
+	animation: hoverWave linear 1.2s infinite;
+}
+
+.btn-call-back i {
+	animation: 1500ms ease 0s normal none 1 running rotation;
+	animation-iteration-count: infinite;
+}
+
+@keyframes hoverWave {
+	0%{box-shadow:0 8px 10px rgba(17,125,255,0.3),0 0 0 0 rgba(17,125,255,0.2),0 0 0 0 rgba(17,125,255,0.2)}
+	40%{box-shadow:0 8px 10px rgba(17,125,255,0.3),0 0 0 15px rgba(17,125,255,0.2),0 0 0 0 rgba(17,125,255,0.2)}
+	80%{box-shadow:0 8px 10px rgba(17,125,255,0.3),0 0 0 30px rgba(17,125,255,0),0 0 0 26.7px rgba(17,125,255,0.067)}
+	100%{box-shadow:0 8px 10px rgba(17,125,255,0.3),0 0 0 30px rgba(17,125,255,0),0 0 0 40px rgba(17,125,255,0.0)}
+}
+
+@keyframes rotation {
+	0%{transform:rotate(0deg);}
+	10%{transform:rotate(-30deg);}
+	20%{transform:rotate(15deg);}
+	30%{transform:rotate(-10deg);}
+	40%{transform:rotate(7.5deg);}
+	50%{transform:rotate(-6deg);}
+	60%{transform:rotate(5deg);}
+	70%{transform:rotate(-4.28571deg);}
+	80%{transform:rotate(3.75deg);}
+	90%{transform:rotate(-3.33333deg);}
+	100%{transform:rotate(0deg);}
 }
 
 /*------------------------------------------------------------------
@@ -1014,6 +1024,11 @@ img {
     --bs-modal-header-padding: 1.5rem 1.5rem 0;
     --bs-modal-border-width: 0;
     --bs-modal-border-radius: 0.375rem;
+}
+
+.modal.dark-mode {
+	--bs-modal-color: #fff;
+    --bs-modal-bg: #120E1E;
 }
 
 .btn-close:focus {
@@ -1060,7 +1075,7 @@ img {
 
 .main {
     flex: 1 1 auto;
-    padding: calc(90px + 80px) 0 0;
+    padding: calc(90px) 0 0;
 }
 
 .dark-mode {
@@ -1231,7 +1246,7 @@ img {
 }
 
 .accordion.accordion-faq .accordion-button::after {
-    margin-top: 1.5rem;
+    margin-top: 0.95rem;
 }
 
 .modal-mainForm {
@@ -1481,10 +1496,6 @@ img-comparison-slider {
     }
 }
 
-
-
-
-
 .opacity-wrap .opacity-item {
     opacity: 1;
     transition: all 0.3s linear;
@@ -1503,6 +1514,52 @@ img-comparison-slider {
     transform: scale(1.05);
 }
 
+.section-hero-02 {
+	background: linear-gradient(90deg, #E8FCE5 0%, #AFF6E4 100%), linear-gradient(90deg, #FFF1E0 0%, #FFF6F1 51.04%, #FFDAF4 100%), #FFFFFF;
+}
+
+.mg-main-top2__title, .mg-main-top2__text {
+	line-height: 1.25;
+}
+
+.mg-main-top2__title br, .mg-main-top2__text br {
+	display: none;
+}
+
+.price-table .price-link {
+	text-decoration: none;
+}
+
+.price-table .price-item {
+	position: relative;
+	border: 1px solid;
+	border-color: #585464;
+	transition: border-color 0.3s ease;
+}
+
+.price-table .price-item:hover {
+	border-color: #46A6F7;
+}
+
+.price-table .price-item .price-description>* {
+	color: #8D9091;
+	margin-bottom: 0;
+}
+
+.price-table .price-link:nth-child(2n) .price-item {
+	background-color: #1C1828;
+}
+
+.price-table .price-link:first-child .price-item {
+	border-top-left-radius: 1rem;
+	border-top-right-radius: 1rem;
+}
+
+.price-table .price-link:last-child .price-item {
+	border-bottom-right-radius: 1rem;
+	border-bottom-left-radius: 1rem;
+}
+
 
 /*//////////////////////////////////////////////////////////////////
 [ MEDIA ]*/
@@ -1518,6 +1575,10 @@ img-comparison-slider {
     .modal-md {
         --bs-modal-width: 600px;
     }
+
+    .mg-main-top2__title br, .mg-main-top2__text br {
+		display: block;
+	}
 }
 
 @media (min-width: 992px) {
@@ -1570,9 +1631,18 @@ img-comparison-slider {
         animation: dropdown-show .3s;
     }
 
+    .btn-scroll-top {
+		right: 2rem;
+    }
+
     .btn-scroll-top.show {
         bottom: 5rem;
     }
+
+    .btn-call-back {
+    	bottom: 10rem;
+		right: 2rem;
+	}
 
     .swiper .btn-prev,
     .swiper .btn-next {
