--- a/css/style.css
+++ b/css/style.css
@@ -1291,6 +1291,15 @@ img-comparison-slider {
     --bs-card-bg: var(--color-black);
 }
 
+.card.card-case img {
+	transform: scale(1);
+	transition: transform 0.3s;
+}
+
+.card.card-case:hover img {
+	transform: scale(1.05);
+}
+
 .testimonialSwiper {
     --swiper-theme-color: var(--color-blue);
     --swiper-pagination-bullet-inactive-color: var(--color-blue);
@@ -1637,6 +1646,7 @@ img-comparison-slider {
 
     .btn-scroll-top.show {
         bottom: 5rem;
+        right: 2rem;
     }
 
     .btn-call-back {
