--- a/css/style.css
+++ b/css/style.css
@@ -759,6 +759,10 @@ img {
     background-color: var(--color-blue);
 }
 
+.bg-gray-linear {
+    background-image: linear-gradient(160deg, #838189 -100%, #14101D 100%);
+}
+
 .z-index-5 {
     z-index: 5;
 }
@@ -1306,12 +1310,14 @@ img-comparison-slider {
     --bs-card-bg: var(--color-black);
 }
 
-.card.card-case img {
+.card.card-scale-img .card-img,
+.card.card-scale-img .card-img-top {
 	transform: scale(1);
 	transition: transform 0.3s;
 }
 
-.card.card-case:hover img {
+.card.card-scale-img:hover .card-img,
+.card.card-scale-img:hover .card-img-top {
 	transform: scale(1.05);
 }
 
